Port legacy GUI/text aliases to modern component and pose types